--- a/index.css
+++ b/index.css
@@ -20,3 +20,10 @@
      padding: 0px 10px;
      
    } */
+   #bottom
+   {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+   }
