--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+body{
+  color:white;
+}
 .nav{
     list-style:none;
     text-align: center;
@@ -20,10 +23,95 @@
      padding: 0px 10px;
      
    } */
-   #bottom
+   #footer
    {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    
+    margin-top: 5%;
+    color:white;
+    /* background-color:rgb(23, 22, 22); */
+    background-color: rgb(39, 39, 40);
+   }
+   #footer>div{
+    
+    margin-top:3%;
+    padding:2%;
+   }
+   #footer>#footer1
+   {
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    margin-top: -10.5%;
+    
+   }
+   #footer>#footer1>#logos
+   {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    
+    width:100%;
+   }
+   #footer1>:nth-last-child(1)
+   {
+    padding-top: 5%;
+    margin-top: 10%;
+    margin-bottom: -4%;
+   }
+   #footer2{
+    margin-right: -5%;
+    margin-left: -5%;
+   }
+   #footer2>.listes
+   {
+    
+     display:grid;
+     grid-template-columns: repeat(2,1fr);
+     grid-template-rows: repeat(1,fr);
+     gap:3%;
+     
+     margin-left: -1%;
+     margin-right:-1%;
+   }
+   #footer2>.listes>.list{
+      margin-right:-5%;
+   }
+   #footer2>.listes>.list>nav
+   {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    
+   }
+   #footer>#footer3
+   {
+    margin-right:-3%;
+    
+   }
+   #footer3>.listes
+   {
+    display:grid;
+     grid-template-columns: repeat(2,1fr);
+     grid-template-rows: repeat(1,fr);
+     gap:5%;
+     
+   }
+   
+   #footer3>.listes>.list>nav
+   {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+   }
+   a{
+    color:white;
+    text-decoration: none;
    }
