--- a/index.css
+++ b/index.css
@@ -23,6 +23,68 @@ body{
      padding: 0px 10px;
      
    } */
+   #content1
+   {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(39, 39, 40);
+   }
+   #content1>div{
+    
+    /* width:75%; */
+    /* border:1px red solid; */
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top:2%;
+    margin-bottom: 2%;
+    
+
+   }
+   #content1>#cont2{
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(1,1fr);
+    gap:3%;
+    padding:auto;
+
+   }
+   #content1>#cont2>div{
+    border:1px blue solid;
+   }
+   .image{
+    border-radius: 2%;
+    width:100%;
+   }
+   .cont>div{
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(1,1fr);
+    gap:3%;
+    padding:auto;
+   }
+   #cont5>div{
+    display:grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(1,1fr);
+    gap:3%;
+    padding:auto;
+   }
+   #content1>#cont6
+   {
+    /* margin-left: -10%;
+    margin-right: -10%; */
+    /* padding-left: -2%; */
+    width:80%;
+   }
+   /* #cont6>div{
+    display:grid;
+    grid-template-columns: repeat(1,1fr);
+    grid-template-rows: repeat(1,1fr);
+    gap:3%;
+    padding:auto;
+   } */
    #footer
    {
     display: flex;
@@ -30,7 +92,7 @@ body{
     justify-content: space-evenly;
     align-items: center;
     
-    margin-top: 5%;
+    /* margin-top: 5%; */
     color:white;
     /* background-color:rgb(23, 22, 22); */
     background-color: rgb(39, 39, 40);
