--- a/index.css
+++ b/index.css
@@ -247,3 +247,49 @@ body{
     color:white;
     text-decoration: none;
    }
+   #m_slider1
+   {
+    position: relative;
+    display: inline-block;
+    /* padding-left: 1%; */
+   }
+   .carousel-item
+   {
+    position: relative;
+    display: inline-block;
+   }
+   .details
+   {
+    position: absolute;
+    top:30%;
+    left:50%;
+    right:10%;
+    /* width:100%;
+    height:100%; */
+    /* display: flex;
+    f */
+   }
+   #readnow1
+   {
+    color:black;
+    background-color: aqua;
+    
+   }
+   #readnow2
+   {
+    color:black;
+    background-color: aqua;
+    
+   }
+   #readnow3
+   {
+    color:black;
+    background-color: aqua;
+    
+   }
+   #readnow4
+   {
+    color:black;
+    background-color: aqua;
+    
+   }
