--- a/index.css
+++ b/index.css
@@ -7,21 +7,24 @@ body{
 
    }
    
-   .navtop{
-    /* padding:3%; */
-   }
  .navtop>.nav{
     display:flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     padding:1.5%;
+    flex-wrap: wrap;
  }
 
  /* .navtop>.nav>.nav-item{
      display: inline-block;
      padding: 0px 10px;
      
+   } */
+   /* .dropdown-item
+   {
+    background-color: black;
+    color: white;
    } */
    .content
    {
@@ -199,6 +202,7 @@ body{
    #footer2{
     margin-right: -5%;
     margin-left: -5%;
+    border-left: 2px white solid;
    }
    #footer2>.listes
    {
@@ -222,9 +226,10 @@ body{
     align-items: flex-start;
     
    }
-   #footer>#footer3
+   #footer3
    {
     margin-right:-3%;
+    border-left: 2px white solid;
     
    }
    #footer3>.listes
@@ -292,4 +297,55 @@ body{
     color:black;
     background-color: aqua;
     
+   }
+   @media all and (min-width: 768px) and (max-width:1023px)
+   {
+    #footer
+    {
+     display: flex;
+     flex-direction: column;
+     justify-content: space-evenly;
+     align-items: center;
+     color:white;
+     background-color: rgb(39, 39, 40);
+     padding-top: 15%;
+    }
+    #footer2
+    {
+      border-top: 2px white solid;
+      border-left: 0px white solid;
+    }
+    #footer3
+    {
+      border-top: 2px white solid;
+      border-left: 0px white solid;
+    }
+    #footer1
+    {
+      /* margin-top:100px; */
+      border:1px red solid;
+    }
+   }
+   @media all and (min-width:0px) and (max-width:767px)
+   {
+    #footer
+    {
+     display: flex;
+     flex-direction: column;
+     justify-content: space-evenly;
+     align-items: center;
+     color:white;
+     background-color: rgb(39, 39, 40);
+     padding-top: 15%;
+    }
+    #footer2
+    {
+      border-top: 2px white solid;
+      border-left: 0px white solid;
+    }
+    #footer3
+    {
+      border-top: 2px white solid;
+      border-left: 0px white solid;
+    }
    }
